2004-03-09  Paul Eggert  <eggert@cs.ucla.edu>

	* argp-parse.c, getopt.c, getopt.h, getopt1.c:
	Sync with libc CVS.
	* lib/getopt_int.h: New file, also synced from libc.

2004-03-07  Paul Eggert  <eggert@twinsun.com>

	* c-stack.c (SIGACTION_WORKS): New macro.  Use it instead of long
	'#if' expressions.  Unlike the code it replaces, it does not
	depend on (defined _SC_PAGESIZE).  However, it does depend on
	HAVE_STRUCT_SIGACTION_SA_SIGACTION; this last change fixes a bug
	first reported by Jason Andrade in
	<http://mail.gnu.org/archive/html/bug-textutils/2003-03/msg00027.html>.

2004-01-18  Simon Josefsson  <jas@extundo.com>

	* strdup.h: New file.
	* strdup.c: Include it.
	* path-concat.c: Include strdup.h. Drop strdup declaration.
	* userspec.c: Include strdup.h. Drop strdup declaration.

2004-02-06  Karl Berry  <karl@gnu.org>

	* config.charset: update from gettext 0.14.1.

2004-02-05  Paul Eggert  <eggert@twinsun.com>

	Add comments and code, prompted by suggestions from Bruno Haible
	for sh-quote.
	* quotearg.h (quotearg_alloc): New decl.  Improve the comments
	describing the enum quoting_style values.
	* quotearg.c (quotearg_alloc): New function.
	(quotearg_buffer_restyled): Treat lone { and } as special.
	Treat = as special.  Work around bug with older shells
	that "see" a '\' that is really the 2nd byte of a multibyte char.
	Quote empty string with shell_quoting_style.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* pipe.h: New file, from GNU gettext.
	* pipe.c: New file, from GNU gettext.

2004-01-27  Bruno Haible  <bruno@clisp.org>

	* execute.h: New file, from GNU gettext.
	* execute.c: New file, from GNU gettext.
	* w32spawn.h: New file, from GNU gettext.

2004-01-23  Paul Eggert  <eggert@twinsun.com>

	Exit-status fix from coreutils.

	Use exit_failure consistently in place of EXIT_FAILURE,
	so that program exit statuses are consistent on failure.

	* argmatch.c (ARGMATCH_DIE) [! defined ARGMATCH_DIE]: